[tool.poetry]
name = "cdrama-bot"
version = "0.1.0"
description = "VIP Drama Cina Bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.1"
gspread = "^6.0.2"
oauth2client = "^4.1.3"
requests = "^2.32.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
